# AVStudy

./: .gitignore  CMakeLists.txt  README.md
decode/: CMakeLists.txt  decoder.cpp  decoder.hpp  main.cpp
demux/: CMakeLists.txt  adts.cpp  adts.hpp  demux.cpp  demuxer.hpp  main.cpp
encode/: AudioEncoder.cpp  AudioEncoder.hpp  CMakeLists.txt  VideoEncoder.cpp  VideoEncoder.hpp  main.cpp
res/: 44100_s16le_2.pcm  douyin_6762052051078843661.flv  douyin_6762052051078843661.ts
utils/: constant.hpp.in
